force-app/main/default/objects/Lead/fields/Has_Event_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Has_Event_Suggestions__c</fullName>
    <formula>OR(
   NOT(ISBLANK(Area_Suggestion__c)),
   NOT(ISBLANK(Venue_Suggestion__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Event Suggestions</label>
    <type>Checkbox</type>
</CustomField>