force-app/main/default/objects/Lead/fields/Has_Orderwentthrough__c.field-meta.xml
<CustomField>
    <fullName>Has_Orderwentthrough__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Handel gået igennem</label>
    <type>Checkbox</type>
</CustomField>