force-app/main/default/objects/Lead/fields/Has_Poa__c.field-meta.xml
<CustomField>
    <fullName>Has_Poa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har Fremtidsfuldmagt</label>
    <type>Checkbox</type>
</CustomField>