force-app/main/default/objects/Lead/fields/Has_Prenup__c.field-meta.xml
<CustomField>
    <fullName>Has_Prenup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har ægtepagt</label>
    <type>Checkbox</type>
</CustomField>