force-app/main/default/objects/Lead/fields/Has_Samejeoverenskomst__c.field-meta.xml
<CustomField>
    <fullName>Has_Samejeoverenskomst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har Samejeoverenskomst</label>
    <type>Checkbox</type>
</CustomField>