force-app/main/default/objects/Lead/fields/Have_testament__c.field-meta.xml
<CustomField>
    <fullName>Have_testament__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har testamente</label>
    <type>Checkbox</type>
</CustomField>