force-app/main/default/objects/Lead/fields/Heir_position__c.field-meta.xml
<CustomField>
    <fullName>Heir_position__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Taget stilling til hvem der skal arve</label>
    <type>Checkbox</type>
</CustomField>