force-app/main/default/objects/Lead/fields/Hit_Rate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Hit_Rate_Lead__c</fullName>
    <formula>IF( ISPICKVAL( Status , &quot;Converted&quot;),&quot;Converted&quot;, IF( ISPICKVAL( Status , &quot;NEW&quot;),&quot;Open&quot;,IF( ISPICKVAL( Status , &quot;Working&quot;),&quot;Open&quot;,&quot;Not converted&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hit Rate Lead</label>
    <type>Text</type>
</CustomField>