force-app/main/default/objects/Lead/fields/Host_Address__c.field-meta.xml
<CustomField>
    <fullName>Host_Address__c</fullName>
    <formula>Lecture_Campaign__r.Host_Address__Street__s  &amp; &quot; &quot; &amp; Lecture_Campaign__r.Host_Address__City__s  &amp; &quot;, &quot; &amp; TEXT(Lecture_Campaign__r.Host_Address__StateCode__s)  &amp; &quot; &quot; &amp; Lecture_Campaign__r.Host_Address__PostalCode__s  &amp; &quot; &quot; &amp;
TEXT(Lecture_Campaign__r.Host_Address__CountryCode__s)</formula>
    <label>Host Address</label>
    <type>Text</type>
</CustomField>