force-app/main/default/objects/Lead/fields/House_size__c.field-meta.xml
<CustomField>
    <fullName>House_size__c</fullName>
    <label>House size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>