force-app/main/default/objects/Lead/fields/Hubhus_Trigger_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hubhus_Trigger_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hubhus Trigger Flag</label>
    <type>Checkbox</type>
</CustomField>