force-app/main/default/objects/Lead/fields/Hubhus_Trigger_Time__c.field-meta.xml
<CustomField>
    <fullName>Hubhus_Trigger_Time__c</fullName>
    <label>Hubhus Trigger Time</label>
    <type>DateTime</type>
</CustomField>