force-app/main/default/objects/Lead/fields/Husdyr__c.field-meta.xml
<CustomField>
    <fullName>Husdyr__c</fullName>
    <label>Husdyr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ja</fullName>
            </value>
            <value>
                <fullName>Nej</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>