force-app/main/default/objects/Lead/fields/Hvad_Oplever_du_som_barriere__c.field-meta.xml
<CustomField>
    <fullName>Hvad_Oplever_du_som_barriere__c</fullName>
    <label>Hvad Oplever du som barriere</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dårlig kemi med rådgiver</fullName>
            </value>
            <value>
                <fullName>Forvirring om tilbud/kampagne</fullName>
            </value>
            <value>
                <fullName>Pris</fullName>
            </value>
            <value>
                <fullName>Andet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>