force-app/main/default/objects/Lead/fields/Hvem_tilbydes_gratis_fremtidsfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>Hvem_tilbydes_gratis_fremtidsfuldmagt__c</fullName>
    <label>Hvem tilbydes gratis fremtidsfuldmagt?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item #1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>