force-app/main/default/objects/Lead/fields/Hvor_mange_ansatte_er_der_i_virksomheden__c.field-meta.xml
<CustomField>
    <fullName>Hvor_mange_ansatte_er_der_i_virksomheden__c</fullName>
    <label>Hvor mange ansatte er der i virksomheden</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Item #1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>