force-app/main/default/objects/Lead/fields/Hvor_mange_b_rn_har_du_I__c.field-meta.xml
<CustomField>
    <fullName>Hvor_mange_b_rn_har_du_I__c</fullName>
    <label>Hvor mange børn har du/I?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>