force-app/main/default/objects/Lead/fields/Insurance_pension_type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_pension_type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Har du forsikringer og pension</label>
    <type>Checkbox</type>
</CustomField>