force-app/main/default/objects/Lead/fields/Internal_Calendly_Booking__c.field-meta.xml
<CustomField>
    <fullName>Internal_Calendly_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Calendly Booking</label>
    <type>Checkbox</type>
</CustomField>