force-app/main/default/objects/Lead/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <formula>OR(
    ISPICKVAL(Status, &quot;Unqualified&quot;),
    ISPICKVAL(Status, &quot;Converted&quot;),
    ISPICKVAL(Status, &quot;Lost&quot;),
    ISPICKVAL(Status, &quot;Qualified&quot;),
    ISPICKVAL(Status, &quot;Closed - Not Converted&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>