force-app/main/default/objects/Lead/fields/Is_Created_by_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_by_Current_User__c</fullName>
    <formula>CreatedById = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Created by Current User</label>
    <type>Checkbox</type>
</CustomField>