force-app/main/default/objects/Lead/fields/Is_Dublet__c.field-meta.xml
<CustomField>
    <fullName>Is_Dublet__c</fullName>
    <label>Is Dublet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>