force-app/main/default/objects/Lead/fields/Is_Interested_in_Pension__c.field-meta.xml
<CustomField>
    <fullName>Is_Interested_in_Pension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Interested in Pension</label>
    <type>Checkbox</type>
</CustomField>