force-app/main/default/objects/Lead/fields/Is_Lecture_Today__c.field-meta.xml
<CustomField>
    <fullName>Is_Lecture_Today__c</fullName>
    <formula>DATEVALUE(Foredragstid_og_dato__c) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lecture Today</label>
    <type>Checkbox</type>
</CustomField>