force-app/main/default/objects/Lead/fields/Is_Lost__c.field-meta.xml
<CustomField>
    <fullName>Is_Lost__c</fullName>
    <formula>IF(OR(ISPICKVAL(Status, &quot;Closed - not converted&quot;), ISPICKVAL(Status, &quot;Unqualified&quot;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lost</label>
    <type>Checkbox</type>
</CustomField>