force-app/main/default/objects/Lead/fields/Is_Next_Call_Time_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Next_Call_Time_Overdue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to whether Next Call Time is Overdue</description>
    <label>Is Next Call Time Overdue</label>
    <type>Checkbox</type>
</CustomField>