force-app/main/default/objects/Lead/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <formula>OR(
    ISPICKVAL(Status, &quot;New&quot;),
    ISPICKVAL(Status, &quot;Working&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>