force-app/main/default/objects/Lead/fields/Is_Owned_by_Current_User_or_a_Queue__c.field-meta.xml
<CustomField>
    <fullName>Is_Owned_by_Current_User_or_a_Queue__c</fullName>
    <formula>OR(
    $User.Id = OwnerId,
    ISBLANK(Owner:User.Id)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owned by Current User or a Queue</label>
    <type>Checkbox</type>
</CustomField>