force-app/main/default/objects/Lead/fields/Is_Owned_by_Queue_or_Meeting_Booker__c.field-meta.xml
<CustomField>
    <fullName>Is_Owned_by_Queue_or_Meeting_Booker__c</fullName>
    <formula>BEGINS(OwnerId, &quot;00G&quot;) || 
ISPICKVAL( Owner:User.User_Role__c , &quot;Meeting Booker&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owned by Queue or Meeting Booker</label>
    <type>Checkbox</type>
</CustomField>