force-app/main/default/objects/Lead/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <formula>IF( OwnerId = $User.Id,True,False )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>