force-app/main/default/objects/Lead/fields/Is_Owner_Queue_or_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Queue_or_User__c</fullName>
    <formula>IF(LEFT(Text_Owner_ID__c, 3) = &quot;00G&quot;, &quot;Queue&quot;, &quot;User&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner Queue or User?</label>
    <type>Text</type>
</CustomField>