force-app/main/default/objects/Lead/fields/Is_Re_booked__c.field-meta.xml
<CustomField>
    <fullName>Is_Re_booked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Flags is set automatically from use of &quot;Re-booking&quot; button</inlineHelpText>
    <label>Is Re-booked</label>
    <type>Checkbox</type>
</CustomField>