force-app/main/default/objects/Lead/fields/IsCallable__c.field-meta.xml
<CustomField>
    <fullName>IsCallable__c</fullName>
    <formula>AND(OR(telegenta__Next_Call_Time__c &lt; NOW(), ISNULL(telegenta__Next_Call_Time__c)), OR(ISPICKVAL(Status, &quot;New&quot;),ISPICKVAL(Status, &quot;Working&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCallableNewWorking</label>
    <type>Checkbox</type>
</CustomField>