force-app/main/default/objects/Lead/fields/IsCallableNew__c.field-meta.xml
<CustomField>
    <fullName>IsCallableNew__c</fullName>
    <description>Callable leads with status New</description>
    <formula>AND(OR(telegenta__Next_Call_Time__c &lt; NOW(), ISNULL(telegenta__Next_Call_Time__c)),ISPICKVAL(Status, &quot;New&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCallableNew</label>
    <type>Checkbox</type>
</CustomField>