force-app/main/default/objects/Lead/fields/IsCallableWorking__c.field-meta.xml
<CustomField>
    <fullName>IsCallableWorking__c</fullName>
    <description>Callable leads with status Working</description>
    <formula>AND(OR(telegenta__Next_Call_Time__c &lt; NOW(), ISNULL(telegenta__Next_Call_Time__c)),ISPICKVAL(Status, &quot;Working&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCallableWorking</label>
    <type>Checkbox</type>
</CustomField>