force-app/main/default/objects/Lead/fields/IsCallout_To_Aros__c.field-meta.xml
<CustomField>
    <fullName>IsCallout_To_Aros__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCallout To Aros</label>
    <type>Checkbox</type>
</CustomField>