force-app/main/default/objects/Lead/fields/Jeg_nsker_at_b_ndl_gge_arven__c.field-meta.xml
<CustomField>
    <fullName>Jeg_nsker_at_b_ndl_gge_arven__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeg ønsker at båndlægge arven</label>
    <type>Checkbox</type>
</CustomField>