force-app/main/default/objects/Lead/fields/Jeg_nsker_en_generalfuldmagt__c.field-meta.xml
<CustomField>
    <fullName>Jeg_nsker_en_generalfuldmagt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeg ønsker en generalfuldmagt</label>
    <type>Checkbox</type>
</CustomField>