force-app/main/default/objects/Lead/fields/Jeg_vil__c.field-meta.xml
<CustomField>
    <fullName>Jeg_vil__c</fullName>
    <label>Jeg vil...</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undgå at staten bliver min værge i tilfælde af alvorlig sygdom</fullName>
            </value>
            <value>
                <fullName>Undgå at mine børn risikerer at miste halvdelen af deres arv</fullName>
            </value>
            <value>
                <fullName>Undgå en skævfordeling af arven</fullName>
            </value>
            <value>
                <fullName>Selv styre hvem der skal arve mig</fullName>
            </value>
            <value>
                <fullName>Undgå at mine børn får arven udbetalt for tidligt</fullName>
            </value>
            <value>
                <fullName>Sikre min partner/ægtefælle mest muligt, efter min bortgang</fullName>
            </value>
            <value>
                <fullName>Undgå at min partner/ægtefælle skal betale en stor sum penge ved min død</fullName>
            </value>
            <value>
                <fullName>Undgå arveafgift til mine arvinger, i så vid udstrækning som det er muligt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>