force-app/main/default/objects/Lead/fields/Kampagne_budskab__c.field-meta.xml
<CustomField>
    <fullName>Kampagne_budskab__c</fullName>
    <label>Kampagne budskab</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TEST</fullName>
            </value>
            <value>
                <fullName>Gratis Testamente foredrag med lækker Kage &amp; Kaffe på Løgstør Parkhotel i Løgstør</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Restaurant Kareten i København S</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på ALFA BRYGHUS og Brasserie i Vejen</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Restaurant Mamamos i Nørresundby</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. Middag på Vilcon Hotel &amp; Konferencegaard</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Rindsholm Kro &amp; Hotel i Viborg</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Hotel Årslev Kro i Brabrand</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Cafe Sesa i Ishøj</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Pejsegaarden i Husum</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente, inkl. middag på Haderslev Golfrestaurant</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Hundested Bed &amp; Breakfast</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Lynæs Fisk &amp; Steakhouse</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Frederiksdal Fribad - ( Afholdt d. 24-10-2023 )</fullName>
            </value>
            <value>
                <fullName>Gratis foredrag om arv og testamente inkl. middag på Bjerringbro Idræts-&amp; Kulturcenter - ( Afholdt d. 16-11-2023 )</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>