force-app/main/default/objects/Lead/fields/Kampagnebudskab_Formula__c.field-meta.xml
<CustomField>
    <fullName>Kampagnebudskab_Formula__c</fullName>
    <label>Kampagnebudskab Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>