force-app/main/default/objects/Lead/fields/Kommentarer__c.field-meta.xml
<CustomField>
    <fullName>Kommentarer__c</fullName>
    <label>Kommentarer</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>