force-app/main/default/objects/Lead/fields/Kommentarer_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Kommentarer_Calendly__c</fullName>
    <label>Kommentarer (Calendly)</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>