force-app/main/default/objects/Lead/fields/Kommentarer_Personligt_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Kommentarer_Personligt_Calendly__c</fullName>
    <description>Dette felt viser kommentarer fra feltet i hver sælgers personlige mødelink</description>
    <label>Kommentarer - Personligt (Calendly)</label>
    <type>TextArea</type>
</CustomField>