force-app/main/default/objects/Lead/fields/L_ngstlevende_kunne_ndre_i_testamentet__c.field-meta.xml
<CustomField>
    <fullName>L_ngstlevende_kunne_ndre_i_testamentet__c</fullName>
    <label>Længstlevende kunne ændre i testamentet?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>