force-app/main/default/objects/Lead/fields/Last_Email_Opened__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Opened__c</fullName>
    <label>Last Email Opened</label>
    <type>DateTime</type>
</CustomField>