force-app/main/default/objects/Lead/fields/Last_Inbound_Call_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Inbound_Call_Time__c</fullName>
    <label>Last Inbound Call Time</label>
    <type>DateTime</type>
</CustomField>