force-app/main/default/objects/Lead/fields/Last_Meeting_Booker_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Booker_Email__c</fullName>
    <label>Last Meeting Booker Email</label>
    <type>Date</type>
</CustomField>