force-app/main/default/objects/Lead/fields/Last_Reopened_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reopened_Date__c</fullName>
    <label>Last Reopened Date</label>
    <type>DateTime</type>
</CustomField>