force-app/main/default/objects/Lead/fields/Last_SMS_Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_SMS_Reminder_Sent_Date__c</fullName>
    <label>Last SMS Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>