force-app/main/default/objects/Lead/fields/Latest_Action_on_Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Latest_Action_on_Marketing_Email__c</fullName>
    <label>Latest Action on Marketing Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Unsubscribed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>