force-app/main/default/objects/Lead/fields/Latest_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Latest_Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Marketing Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Latest Marketing Campaign)</relationshipLabel>
    <relationshipName>Marketing_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>