force-app/main/default/objects/Lead/fields/Latest_Marketing_Email__c.field-meta.xml
<CustomField>
    <fullName>Latest_Marketing_Email__c</fullName>
    <label>Latest Marketing Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>