force-app/main/default/objects/Lead/fields/Latest_Marketing_Link_Clicked__c.field-meta.xml
<CustomField>
    <fullName>Latest_Marketing_Link_Clicked__c</fullName>
    <label>Latest Marketing Link Clicked</label>
    <type>Url</type>
</CustomField>