force-app/main/default/objects/Lead/fields/Lead_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Group_Name__c</fullName>
    <label>Lead Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Kampagne 2</fullName>
            </value>
            <value>
                <fullName>Kampagne 3</fullName>
            </value>
            <value>
                <fullName>DFJ B2B</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Kampagne 1</fullName>
                <default>true</default>
                <label>Kampagne 1</label>
            </value>
            <value>
                <fullName>TD Kampagne 1</fullName>
            </value>
            <value>
                <fullName>Genåbnet</fullName>
            </value>
            <value>
                <fullName>Dublet Kampagne</fullName>
            </value>
            <value>
                <fullName>Norrina</fullName>
            </value>
            <value>
                <fullName>Nina</fullName>
            </value>
            <value>
                <fullName>Denis</fullName>
            </value>
            <value>
                <fullName>Flemming</fullName>
            </value>
            <value>
                <fullName>Testamente Sverige</fullName>
            </value>
            <value>
                <fullName>Lotte Gravers</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>Andet</fullName>
            </value>
            <value>
                <fullName>Parkeret</fullName>
            </value>
            <value>
                <fullName>Dublet Kampagne DK</fullName>
            </value>
            <value>
                <fullName>Dublet Kampagne SE</fullName>
            </value>
            <value>
                <fullName>Mailkampagne</fullName>
            </value>
            <value>
                <fullName>Facebook Burton</fullName>
            </value>
            <value>
                <fullName>Kampagne DK</fullName>
            </value>
            <value>
                <fullName>Kampagne SE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>