force-app/main/default/objects/Lead/fields/Lead_Segment__c.field-meta.xml
<CustomField>
    <fullName>Lead_Segment__c</fullName>
    <formula>IF(TEXT(UTM_Source__c) = &quot;Foredrag&quot;, &quot;Lecture&quot;,
   IF(OR(TEXT(UTM_Source__c) = &quot;Reference&quot;, 
         TEXT(UTM_Source__c) = &quot;Referral Program&quot;, 
         NOT(ISBLANK(TEXT(User_Created_Type__c)))),
      &quot;Referrals &amp; User Created&quot;,
      IF(AND(TEXT(UTM_Source__c) = &quot;Facebook&quot;, 
             TEXT(UTM_Medium__c) = &quot;PR Leads&quot;),
         &quot;PR Leads&quot;,
         &quot;Other&quot;
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Segment</label>
    <type>Text</type>
</CustomField>