force-app/main/default/objects/Lead/fields/Lead_Value__c.field-meta.xml
<CustomField>
    <fullName>Lead_Value__c</fullName>
    <label>Lead Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>