force-app/main/default/objects/Lead/fields/Lecture_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lecture Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads (Lecture Campaign)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>