force-app/main/default/objects/Lead/fields/Lecture_Date_Check__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Date_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lecture Date Check</label>
    <type>Checkbox</type>
</CustomField>