force-app/main/default/objects/Lead/fields/Lecture_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Lecture_Start_Time__c</fullName>
    <formula>LPAD(TEXT(MOD(HOUR(TIMEVALUE( Foredragstid_og_dato__c )) + 1, 24)), 2, &apos;0&apos;) &amp; &quot;:&quot; &amp; 
LPAD(TEXT(MINUTE(TIMEVALUE(Foredragstid_og_dato__c))), 2, &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lecture Start Time</label>
    <type>Text</type>
</CustomField>