force-app/main/default/objects/Lead/fields/Ledsagers_navn_Calendly__c.field-meta.xml
<CustomField>
    <fullName>Ledsagers_navn_Calendly__c</fullName>
    <label>Ledsagers navn (Calendly)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enter value</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>